--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,8 @@ spring.application.name=ms-productos
 
 server.port=8085
 
-spring.datasource.url=${BD_URL_AZURE}
+spring.datasource.url=jdbc:sqlserver://servicios.database.windows.net:1433;database=${DB_NAME};user=${DB_USER};password=${DB_PASSWORD};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.username=${BD_USER_AZURE}
-spring.datasource.password=${BD_PASSWORD_AZURE}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
