--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
 spring.jpa.open-in-view=false
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
